<resources>
    <string-array name="empty"  translatable="false"/>

    <string name="app_name">Sleep Cycle Alarm</string>

    <string name="content_descriptions_set_alarm_icon">Set alarm icon</string>
    <string name="content_descriptions_empty_list_placeholder">Your list is empty</string>

    <!-- SLEEP QUALITY STATES-->
    <string name="sleep_state_unhealthy">Unhealthy</string>
    <string name="sleep_state_optimal">Optimal</string>
    <string name="sleep_state_healthy">Healthy</string>
    <string name="sleep_state_notrecommended">Not recommended</string>

    <!-- TABS STRINGS -->
    <string name="sleep_now_tab">Sleep now</string>
    <string name="wake_up_at_tab">Wake up at</string>
    <string name="alarms_tab">Alarms</string>

    <!-- CARD INFO STRINGS -->
    <string name="sleep_now_card_info_title">Going to sleep right now?</string>
    <string name="sleep_now_card_info_summary">Choose any hour of listed below, so I will easily wake you up on time!</string>

    <string name="wake_up_at_card_info_title">Need to wake up on specific time?</string>
    <string name="wake_up_at_card_info_summary">Set hour and I will create a list of hours when you should go to sleep</string>
    <string name="wake_up_at_card_info_title_when_user_defined_hour">You want to wake up at %1$s?</string>
    <string name="wake_up_at_card_info_summary_when_user_defined_hour">I\'ve created a list of hours when you should go to sleep to wake up fully rested at defined hour</string>

    <string name="alarms_card_info_title">Manage your alarms.</string>
    <string name="alarms_card_info_summary">List presents active alarms that are going to be executed in the future. Used alarms will be removed, so you don\'t need to care about them.</string>

    <!-- BUTTON STRINGS -->
    <string name="wake_up_at_set_hour_button">Set hour</string>

    <!-- LIST STRINGS -->
    <string name="global_hour_mark">h</string>
    <string name="global_minute_mark">min</string>
    <string name="sleep_now_list_helper">Tap on any hour of listed below to set alarm</string>
    <string name="wake_up_at_list_helper">Tap on any hour of listed below to set alarm</string>
    <string name="alarms_list_helper">Tap to edit, press and hold to select</string>
    <string name="list_element_title_changeable">%1$d:%2$d</string> <!-- HH:MM -->
    <string name="list_element_summary_changeable">%1$s of sleep, %2$s</string> <!-- 4h 30min of sleep, Optimal -->
    <string name="wake_up_at_empty_list_title">No results yet</string>
    <string name="wake_up_at_empty_list_summary">Tap the \'Set hour\' button to pick your time and see results</string>
    <string name="alarms_empty_list_title">No alarms yet</string>
    <string name="alarms_empty_list_summary">Move to the first or second tab, to set everything up!</string>

    <!-- MENU STRINGS -->
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

    <!-- DIALOG STRINGS -->
    <string name="dialog_add_new_alarm">Add alarm</string>
    <string name="dialog_edit_alarm">Edit alarm</string>
    <string name="dialog_set_hour_to_wake_up_at">Set hour when you want to wake up at</string>

    <!-- TOAST STRINGS -->
    <string name="toast_double_back_to_exit">Press once again to exit</string>
    <string name="toast_what_if_theme_didnt_apply">If the theme didn\'t apply correctly, please kill and open the app manually</string>

    <!-- PREFERENCE STRINGS -->

    <!-- NEW CATEGORY -->
    <string name="pref_theme_category">Theme</string>

    <string name="pref_change_theme_title">Night mode schedule</string>
    <string-array name="pref_change_theme_titles">
        <item>Never</item>
        <item>Auto (Depends on time)</item>
        <item>Always</item>
    </string-array>
    <string-array name="pref_change_theme_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- NEW CATEGORY -->
    <string name="pref_wordclock_category">Word clock</string>

    <string name="pref_date_and_time_title">Date &amp; Time</string>
    <string name="pref_date_and_time_summary">Set the system date and time</string>

    <!-- NEW CATEGORY -->

    <string name="pref_alarm_category">Alarm</string>

    <string name="pref_alarm_in_silent_mode_title">Alarm in silent mode</string>
    <string name="pref_alarm_in_silent_mode_summary">Play alarm even when phone is in silent mode</string>

    <string-array name="pref_alarm_in_silent_mode_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_alarms_has_same_ringtone_switch_title">Alarms has the same ringtone</string>
    <string name="pref_alarms_has_same_ringtone_switch_summary">Avoid configuring ringtone for every single alarm.</string>
    <string name="pref_ringtone_select_title">Alarm ringtone</string>
    <string name="pref_ringtone_select_default_summary">Tap to select ringtone</string>
    <string name="pref_ringtone_select_selected_summary">Chosen ringtone: %s</string>

    <string name="pref_ring_duration_title">Ring duration</string>
    <string-array name="pref_ring_duration_titles">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="pref_ring_duration_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string name="pref_alarms_intervals_title">Snooze duration</string>
    <string-array name="pref_alarms_intervals_titles">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="pref_alarms_intervals_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string name="pref_auto_silence_title">Auto silence</string>
    <string-array name="pref_auto_silence_titles">
        <item>After 1 time</item>
        <item>After 3 times</item>
        <item>After 5 times</item>
        <item>After 10 times</item>
    </string-array>
    <string-array name="pref_auto_silence_values">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <!-- ERROR CODES
    typo:
    error_<class name>_<info>
    -->
    <!--
    TODO: well done error msg!!!
    -->
    <string name="error_menu_activity_default_case_in_switch">Cannot open this window. Please try again.</string>
    <string name="error_menu_activity_key_use_default_value">Cannot open this window. Please try again.</string>

</resources>
