<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_language_category">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_language_titles"
            android:entryValues="@array/pref_language_values"
            android:key="language_select"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_language_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_alarm_category">

        <SwitchPreference
            android:id="@+id/alarmInSilentMode"
            android:key="silent_mode"
            android:title="@string/pref_alarm_in_silent_mode_title"
            android:summary="@string/pref_alarm_in_silent_mode_summary"
            android:defaultValue="true" />

        <SwitchPreference
            android:id="@+id/alarmsHasSameRingtone"
            android:key="same_ringtone"
            android:title="@string/pref_alarms_has_same_ringtone_switch_title"
            android:summary="@string/pref_alarms_has_same_ringtone_switch_summary"
            android:defaultValue="false" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_ring_duration_titles"
            android:entryValues="@array/pref_ring_duration_values"
            android:key="ring_duration"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_ring_duration_title" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_alarms_intervals_titles"
            android:entryValues="@array/pref_alarms_intervals_values"
            android:key="alarms_intervals"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_alarms_intervals_title" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_auto_silence_titles"
            android:entryValues="@array/pref_auto_silence_values"
            android:key="auto_silence"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_auto_silence_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_theme_category">

        <SwitchPreference
            android:defaultValue="false"
            android:key="change_theme"
            android:title="@string/pref_change_theme_title"
            android:summaryOn="@string/pref_change_theme_summary_on"
            android:summaryOff="@string/pref_change_theme_summary_off" />

    </PreferenceCategory>

</PreferenceScreen>